--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
+env:
+  global:
+    - MOZ_HEADLESS=1
 addons:
-  browserstack:
-    username: "rahulbhatiya1"
-    access_key: "mvAJgJ89CHUpsP2574cF"
+  firefox: latest
