--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
-env:
-  global:
-    - MOZ_HEADLESS=1
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 addons:
-  firefox: "56"
+  firefox: "47.0.2"
